# tracescope

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/tracescope-cli/: Cargo.toml
crates/tracescope-cli/src/: cli.rs  lib.rs  main.rs
crates/tracescope-cli/tests/: end_to_end.rs
crates/tracescope-collect/: Cargo.toml
crates/tracescope-collect/src/: clock.rs  collector.rs  guard.rs  lib.rs
crates/tracescope-core/: Cargo.toml
crates/tracescope-core/benches/: analysis.rs
crates/tracescope-core/src/: critical_path.rs  error.rs  flamegraph.rs  lib.rs  percentile.rs  report.rs  span.rs  trace.rs
docs/: architecture.md  trace-format.md
docs/adr/: 0001-instrumentation-not-sampling.md  0002-pure-analysis-core.md  0003-percentile-method.md  0004-clock-abstraction.md
scripts/: build.sh  demo.sh
