[workspace]
resolver = "3"
members = [
    "crates/tracescope-core",
    "crates/tracescope-collect",
    "crates/tracescope-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Joseph Edwards <josephleonedwards@gmail.com>"]
repository = "https://github.com/leisurelyleon/tracescope"
description = "A tracing and performance-analysis toolkit: spans, flamegraphs, percentiles, and critical-path analysis."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
