[package]
name = "tracescope-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for tracescope."

[[bin]]
name = "tracescope"
path = "src/main.rs"

[dependencies]
tracescope-core = { path = "../tracescope-core" }
tracescope-collect = { path = "../tracescope-collect" }
clap.workspace = true
