[package]
name = "tracescope-collect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Runtime span collector for tracescope: a pluggable clock and an RAII span guard."

[dependencies]
tracescope-core = { path = "../tracescope-core" }
