[package]
name = "tracescope-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure trace model and performance-analysis algorithms for tracescope (no I/O, no timing)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "analysis"
harness = false
